# face-recognition

./: .gitignore  CMakeLists.txt  README.md  make.sh
include/: FaceDetectFMTCNN.hpp
src/: FaceDetectFMTCNN.cpp  main.cpp
static/model/: det1_.caffemodel  det1_half.caffemodel  det2_half.caffemodel  det3-half.caffemodel  det3.caffemodel  sphereface_model.caffemodel
